--- a/api/.env.template
+++ b/api/.env.template
@@ -1,5 +1,15 @@
 PORT="..."
 
+ENCRYPTION_SALT="..."
+ENCRYPTION_PASSWORD="..."
+
+DB_URL="..."
+DB_NAME="..."
+
+MYSQL_CONNECTION="..."
+MYSQL_USERNAME="..."
+MYSQL_PASSWORD="..."
+
 JWT_REALM="..."
 JWT_AUDIENCE="..."
 JWT_ISSUER="..."
@@ -10,10 +20,11 @@ TWILIO_AUTH_TOKEN="..."
 TWILIO_DEFAULT_REGION="..."
 TWILIO_PHONE="..."
 
-LOG_SMTP_PORT="..."
-LOG_SMTP_PASSWORD="..."
-LOG_SMTP_USERNAME="..."
+SMTP_PORT="..."
+SMTP_PASSWORD="..."
+SMTP_USERNAME="..."
+SMTP_HOST="..."
+
 LOG_SMTP_SUBJECT="..."
 LOG_SMTP_TO="..."
 LOG_SMTP_FROM="..."
-LOG_SMTP_HOST="..."
