--- a/api/.env.template
+++ b/api/.env.template
@@ -1,30 +1,31 @@
-PORT="..."
+PORT=""
 
-ENCRYPTION_SALT="..."
-ENCRYPTION_PASSWORD="..."
+ENCRYPTION_SALT=""
+ENCRYPTION_PASSWORD=""
 
-DB_URL="..."
-DB_NAME="..."
+DB_URL=""
+DB_NAME=""
 
-MYSQL_CONNECTION="..."
-MYSQL_USERNAME="..."
-MYSQL_PASSWORD="..."
+MYSQL_CONNECTION=""
+MYSQL_USERNAME=""
+MYSQL_PASSWORD=""
 
-JWT_REALM="..."
-JWT_AUDIENCE="..."
-JWT_ISSUER="..."
-JWT_PRIVATE_KEY="..."
+JWT_REALM=""
+JWT_AUDIENCE=""
+JWT_ISSUER=""
+JWT_PRIVATE_KEY=""
+JWT_KEYID=""
 
-TWILIO_ACCOUNT_SID="..."
-TWILIO_AUTH_TOKEN="..."
-TWILIO_DEFAULT_REGION="..."
-TWILIO_PHONE="..."
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_DEFAULT_REGION=""
+TWILIO_PHONE=""
 
-SMTP_PORT="..."
-SMTP_PASSWORD="..."
-SMTP_USERNAME="..."
-SMTP_HOST="..."
+SMTP_PORT=""
+SMTP_PASSWORD=""
+SMTP_USERNAME=""
+SMTP_HOST=""
 
-LOG_SMTP_SUBJECT="..."
-LOG_SMTP_TO="..."
-LOG_SMTP_FROM="..."
+LOG_SMTP_SUBJECT=""
+LOG_SMTP_TO=""
+LOG_SMTP_FROM=""
