--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "openapi": "ng-openapi-gen && ./scripts/fix-ng-openapi-gen.js"
+    "openapi-fix": "ts-node ./scripts/fix-ng-openapi-gen.ts",
+    "openapi": "ng-openapi-gen"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-openapi-gen": "^0.25.1",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
