--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "serve": "npx http-server dist/app",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build": "ng build --localize",
+    "watch": "ng build --localize --watch --configuration development",
     "test": "ng test",
+    "localize": "ng extract-i18n --output-path src/locale",
     "openapi-fix": "ts-node ./scripts/fix-ng-openapi-gen.ts",
     "openapi": "ng-openapi-gen"
   },
@@ -38,6 +40,7 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.7",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
