--- a/api/.gitignore
+++ b/api/.gitignore
@@ -3,4 +3,6 @@ build
 .gradle
 .env
 logs
+api/src/main/resources/static/.well-known
+core/src/main/resources/log4j2.xml
 api/src/main/resources/openapi
