--- a/app/package.json
+++ b/app/package.json
@@ -4,16 +4,12 @@
   "scripts": {
     "ng": "ng",
     "test": "ng test",
-
     "start": "ng serve",
     "start-en": "ng serve --port=4201 --configuration=development-en",
-
     "build": "ng build --localize && npx http-server -c-1 -p 8080 dist/app",
     "watch": "ng build --localize --watch --configuration development",
-
     "localize": "ng extract-i18n --format=json --output-path src/locale",
     "localize-fix": "meld src/locale/messages.json src/locale/messages.en.json",
-
     "openapi-fix": "ts-node ./scripts/fix-ng-openapi-gen.ts",
     "openapi": "ng-openapi-gen"
   },
@@ -54,6 +50,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-mocks": "^14.11.0",
     "ng-openapi-gen": "^0.25.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
