--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -7,6 +7,7 @@ indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+# Editor configuration, see https://editorconfig.org
 
 [*.ts]
 quote_type = single
