--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "start": "ng serve",
     "start-en": "ng serve --port=4201 --configuration=development-en",
     "build": "ng build --localize && npx http-server -c-1 -p 8080 dist/app",
@@ -48,6 +48,7 @@
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
+    "karma-html-reporter": "^0.2.7",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-mocks": "^14.11.0",
