--- a/api/.env.template
+++ b/api/.env.template
@@ -8,6 +8,11 @@ ENCRYPTION_PASSWORD=""
 DB_URL=""
 DB_NAME=""
 
+FTP_SERVER=""
+FTP_PORT=""
+FTP_USERNAME=""
+FTP_PASSWORD=""
+
 MYSQL_CONNECTION=""
 MYSQL_USERNAME=""
 MYSQL_PASSWORD=""
