--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "@types/jasmine": "~4.3.0",
     "ajv": "^8.12.0",
     "cypress": "^13.3.0",
+    "cypress-xpath": "^2.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
