--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.1",
     "dexie": "^3.2.4",
     "iso8601-duration": "^2.1.1",
+    "jasmine": "^5.1.0",
     "moment": "^2.29.4",
     "ngx-logger": "^5.0.12",
     "rxjs": "~7.8.0",
