--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "cypress": "^13.3.0",
     "cypress-iframe": "^1.0.1",
     "cypress-xpath": "^2.0.1",
+    "generate-schema": "^2.6.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
