Dodajanje knjižnice za local storage.

--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,7 @@
     "ajv": "^8.12.0",
     "cypress": "^13.3.0",
     "cypress-iframe": "^1.0.1",
+    "cypress-localstorage-commands": "^2.2.4",
     "cypress-xpath": "^2.0.1",
     "generate-schema": "^2.6.0",
     "jasmine-core": "~4.6.0",
